@@ -1,5 +1,10 @@
 2007-10-26  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-dialog.c
+		- (dialog_init): fix dialog text when just asking for secrets
+
+2007-10-26  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (nma_update_info): update for speed/bitrate type changes
 
